@@ -6,5 +6,7 @@ includedir=@includedir@
 Name: Xaw
 Description: X Athena Widgets Library, version 7
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lXaw7 @XAW7_LIBS@
-Cflags: -I${includedir} @XAW7_CFLAGS@
+Requires: xproto xt xmu
+Requires.private: x11 xext xt xmu xpm
+Cflags: -I${includedir}
+Libs: -L${libdir} -lXaw7
