@@ -6,5 +6,7 @@ includedir=@includedir@
 Name: Xaw
 Description: X Athena Widgets Library
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lXaw8 @XAW8_LIBS@
-Cflags: -I${includedir} @XAW8_CFLAGS@
+Requires: xproto xt xmu printproto
+Requires.private: x11 xext xt xmu xpm xp
+Cflags: -I${includedir}
+Libs: -L${libdir} -lXaw8
